# QuantumEnergyOS-V.03

./: .env.example  .gitignore  App.tsx  CODE_OF_CONDUCT.md  Cargo.toml  Contributing.md  QEnergy5D  QiskitRuntimeService  Quartz5D.tsx  README-1.md  README.md  REFACTOR_REPORT.md  detector_apagones.py  generate_terraform.rs  i18n.py  quantum_crypto.py  requirements.txt  server.py  test_quantum_crypto.py
QuantumEnergyOS-V.02-main/: #  .env.example  App.tsx  Auth  BALANCEO-DE-CARGA  BUILD-ISO-WINDOWS.md  BalancearRed.qs  BraidingDebug.qs  Build-ISO.ps1  CONTRIBUTING.md  CREACION-DE-TABLAS  Cargo.toml  Ci security  Code of conduct.md  Cooling.qs  Dashboard.tsx  Diagrama de Flujo  Docker  Dockerfile  Documentation  FusionSim.qs  GITIGNORE  GridBalance.tsx  Guía de Construcción — QuantumEnergyOS V.02 ISO.md  Hello-World  INSTALL.md  Issue  KardashevOne  LICENSE  MONITOREO-ENERGETICO  Makefile  QEnergy4D  QUICK-START-WINDOWS.md  QuantumCryptography.qs  QuantumEnergyOS  QuantumEnergyOS-main.sln  QuantumEnergyOS.csproj  Quartz4D.tsx  SECURITY.md  Settings → Branch protection  (+88 more)
QuantumEnergyOS-V.02-main/AppData/Local/Programs/Microsoft VS Code/QuantumEnergyOS/: .gitignore  BUILDSYSTEM.md  GIT_COMMANDS.sh  LICENSE  Makefile  README.md
QuantumEnergyOS-V.02-main/AppData/Local/Programs/Microsoft VS Code/QuantumEnergyOS/api/: requirements.txt
QuantumEnergyOS-V.02-main/AppData/Local/Programs/Microsoft VS Code/QuantumEnergyOS/buildsystem/: build.ps1
QuantumEnergyOS-V.02-main/AppData/Local/Programs/Microsoft VS Code/QuantumEnergyOS/climate_orchestrator/: __init__.py  models.py  quantum_processor.py
QuantumEnergyOS-V.02-main/AppData/Local/Programs/Microsoft VS Code/QuantumEnergyOS/docker/: Dockerfile
QuantumEnergyOS-V.02-main/AppData/Local/Programs/Microsoft VS Code/QuantumEnergyOS/photonic-bridge/: Cargo.toml
QuantumEnergyOS-V.02-main/QuantumEnergyOS-V.02-main/: syslinux.cfg
QuantumEnergyOS-V.02-main/airootfs/root/: customize_airootfs.sh
QuantumEnergyOS-V.02-main/api/: alert  server.py
QuantumEnergyOS-V.02-main/api/v1/quantum/: braiding
QuantumEnergyOS-V.02-main/boot/: qeos-api.service  qeos-immutable-setup.service  qeos-immutable-setup.sh  quantum-boot.sh  splash.txt
QuantumEnergyOS-V.02-main/climate_orchestrator/: Telegram_notification  __init__.py  actions.py  bridge.py
QuantumEnergyOS-V.02-main/cloud/: azure_quantum.py  ibm_quantum.py  quantum_backends.py
QuantumEnergyOS-V.02-main/compositor/: SUMMARY.md  build-iso.sh  install.sh
QuantumEnergyOS-V.02-main/compositor/src/: INSTALL.md  Makefile  README.md  energy-daemon.py  init  main.c  splash.sh
QuantumEnergyOS-V.02-main/compositor/src/themes/: quantum-neon.ini
QuantumEnergyOS-V.02-main/docs/: I18N_GUIDE.md  architecture.md
QuantumEnergyOS-V.02-main/enterprise/: EnterpriseAdmin.tsx  enterpriseAudit.ts  enterpriseAuth.ts  enterpriseBackup.ts  enterpriseReports.ts  index.ts
QuantumEnergyOS-V.02-main/kernel/quantum_photonic/: photonic_core.py  quantum_crypto_bridge.rs
QuantumEnergyOS-V.02-main/mnt/user-data/outputs/photonic-kernel/qcall/src/: lib.rs
QuantumEnergyOS-V.02-main/photonic-bridge/: Cargo.toml
QuantumEnergyOS-V.02-main/photonic-bridge/src/: lib.rs  main.rs
QuantumEnergyOS-V.02-main/photonic-core/: Cargo.toml
QuantumEnergyOS-V.02-main/photonic-core/src/: energy_optimizer.rs  lib.rs
QuantumEnergyOS-V.02-main/public/locales/es/: common.json
QuantumEnergyOS-V.02-main/quantum_crypto_pqc/: __init__.py  dilithium.py  energy_crypto.py  falcon.py  hybrid.py  kyber.py  models.py  session_manager.py  spincs.py  utils.py
QuantumEnergyOS-V.02-main/quantum_crypto_pqc/tests/: __init__.py  test_integration.py  test_pqc.py
QuantumEnergyOS-V.02-main/screens/: GridBalance.tsx  Quartz4D.tsx  SettingsScreen.tsx
QuantumEnergyOS-V.02-main/src/: Cooling.qs  i18n.ts  index.css  index.tsx  paz_luz.rs
QuantumEnergyOS-V.02-main/src/hooks/: useLanguage.ts
QuantumEnergyOS-V.02-main/src/store/: settingsStore.ts
photonic-core/: Cargo.toml
photonic-core/src/: lib.rs  paz_luz.rs  photonic_core.rs  quartz_4d.rs  quartz_5d.rs  sensors.rs  types.rs
qeos/: ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md
qeos/cores/arch/x86_64/boot/: boot.S
qeos/cores/arch/x86_64/mm/: lib.rs  mod.rs
qeos/cores/kernel/: Cargo.toml  QuantumKernel.sv  mod.rs
qeos/cores/kernel/device/: lib.rs
qeos/cores/kernel/memory/: mod.rs  pmm.rs  tests.rs  vmm.rs
qeos/cores/kernel/scheduler/: mod.rs  priority.rs
qeos/cores/kernel/sync/: lib.rs
qeos/cores/kernel/task/: context.S  lib.rs  mod.rs
qeos/cores/kernel/telemetry/: backpressure.rs  driver.rs  frame.rs  mod.rs  spsc.rs
qeos/daemons/aicored/: Cargo.toml
qeos/daemons/aicored/src/: config.rs  lib.rs  service.rs
qeos/daemons/climated/: Cargo.toml
qeos/daemons/climated/src/: config.rs  lib.rs  service.rs
qeos/daemons/energyd/: Cargo.toml
qeos/daemons/energyd/src/: config.rs  lib.rs  service.rs
qeos/daemons/photonicd/: Cargo.toml
qeos/daemons/photonicd/src/: config.rs  lib.rs  service.rs
qeos/daemons/quantumd/: Cargo.toml
qeos/daemons/quantumd/src/: config.rs  lib.rs  service.rs  traits.rs
qeos/docs/api/: README.md
qeos/docs/developer/: README.md
qeos/libs/qeos-climate/: Cargo.toml
qeos/libs/qeos-climate/src/: alert.rs  climate.rs  lib.rs
qeos/libs/qeos-common/: Cargo.toml
qeos/libs/qeos-common/src/: config.rs  error.rs  lib.rs  metrics.rs  models.rs  quantum.rs  types.rs
qeos/libs/qeos-energy/: Cargo.toml
qeos/libs/qeos-energy/src/: lib.rs  model.rs  optimizer.rs
qeos/libs/qeos-photonic/: Cargo.toml
qeos/libs/qeos-photonic/src/: fiber.rs  lib.rs  signal.rs
qeos/libs/qeos-quantum/: Cargo.toml
qeos/libs/qeos-quantum/src/: circuit.rs  deutsch_jozsa.rs  grover.rs  lib.rs  qft.rs  shor.rs  simulator.rs
qeos/tests/: Cargo.toml
qeos/tests/integration/: climated_smoke.rs  energyd_smoke.rs  quantumd_smoke.rs
qeos/tools/scripts/install/: add_user.sh  install.sh
qeos/tools/scripts/systemd/: aicored.service  climated.service  energyd.service  photonicd.service  quantumd.service
quantum-browser-daemon/: Cargo.toml
(+69 files in other folders)
