# ═══════════════════════════════════════════════════════════════════════
#  quantum-browser-daemon — QuantumEnergyOS V.02
#  Monitor de navegadores via /proc + cgroups v2
#  Solo std — sin dependencias externas
# ═══════════════════════════════════════════════════════════════════════
#
# Agregar al workspace Cargo.toml raíz:
#   members = [..., "quantum-browser-daemon"]

[package]
name        = "quantum-browser-daemon"
version     = "0.2.0"
edition     = "2021"
authors     = ["Giovanny Anthony Corpus Bernal <github.com/GioCorpus>"]
description = "Daemon de monitoreo de navegadores vía /proc — QuantumEnergyOS V.02"
license     = "MIT"

# Solo std — ninguna dependencia externa
# El HTTP POST se implementa con std::net::TcpStream directamente.
[dependencies]

[[bin]]
name = "quantum-browser-daemon"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto       = true
strip     = "symbols"
