[package]
name = "photonic-core"
version = "0.2.0"
edition = "2021"
authors = ["Giovanny Anthony Corpus Bernal <github.com/GioCorpus>"]
description = "Photonic Core — Quantum components for QuantumEnergyOS"
license = "MIT"

[dependencies]
num-complex = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }
libm = "0.2"
heapless = { version = "0.8", default-features = false }
rusqlite = { version = "0.31.0", features = ["bundled"] }
rand = { version = "0.8", features = ["small_rng"] }