[package]
name = "quantum-browser-daemon"
version = "0.2.0"
edition = "2021"
authors = ["Giovanny Anthony Corpus Bernal <github.com/GioCorpus>"]
description = "Daemon de monitoreo de navegadores vía /proc — QuantumEnergyOS V.02"
license = "MIT"

# Solo std — ninguna dependencia externa
[dependencies]
