[package]
name = "aicored"
version = "0.3.0"
edition = "2021"
description = "QuantumEnergyOS AI Core Daemon - local AI orchestration"

[dependencies]
qeos-common = { path = "../../libs/qeos-common" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
tch-rs = { version = "0.15", optional = true }
ort = { version = "2.0", features = ["fetch-models"], optional = true }

[features]
default = ["ort"]
torch = ["dep:tch-rs"]
ort = ["dep:ort"]
