[package]
name = "climated"
version = "0.3.0"
edition = "2021"
description = "QuantumEnergyOS Climate Daemon - weather monitoring and climate prediction"

[dependencies]
qeos-common = { path = "../../libs/qeos-common" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ndarray = "0.16"
linfa = "0.7"
