[package]
name = "energyd"
version = "0.3.0"
edition = "2021"
description = "QuantumEnergyOS Energy Daemon - energy optimization and grid management"

[dependencies]
qeos-common = { path = "../../libs/qeos-common" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }
thiserror = "2.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
ndarray = "0.16"
tch-rs = { version = "0.15", optional = true }
linfa = { version = "0.7", optional = true }

[features]
default = ["torch"]
torch = ["dep:tch-rs"]
ml = ["dep:linfa"]
