[package]
name = "qeos-climate"
version = "0.3.0"
edition = "2021"
description = "QuantumEnergyOS climate modeling and prediction library"

[dependencies]
qeos-common = { path = "../qeos-common" }
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
