[package]
name = "qeos-common"
version = "0.3.0"
edition = "2021"
description = "QuantumEnergyOS common library - shared types, traits, and utilities"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
config = "0.14"
validator = { version = "0.18", features = ["derive"] }
