[package]
name = "qeos-quantum"
version = "0.3.0"
edition = "2021"
description = "QuantumEnergyOS quantum algorithms and simulation library"

[dependencies]
qeos-common = { path = "../qeos-common" }
thiserror = "2.0"
ndarray = "0.16"
numpy = "0.23"
uuid = { version = "1.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
