[package]
name = "photonic-bridge"
version = "0.2.0"
edition = "2021"
description = "Quantum-Photonic Bridge for Energy Optimization"
authors = ["Giovanny Corpus Bernal <giovanny@quantumenergyos.mx>"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "photonic_bridge"
path = "src/lib.rs"

[[bin]]
name = "photonic-bridge"
path = "src/main.rs"