[package]
name = "photonic-core"
version = "0.2.0"
edition = "2021"
description = "Photonic Core for QuantumEnergyOS Energy Management"
authors = ["Giovanny Corpus Bernal <giovanny@quantumenergyos.mx>"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "photonic_core"
path = "src/lib.rs"

[[bin]]
name = "photonic-core"
path = "src/main.rs"